# cfdb

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  cfdb_summary_usage.md  coordinate_insert_assessment.md  implementation_plan.md  mkdocs.yml  pyproject.toml  requirements_tests.txt
.github/workflows/: build.yml  documentation.yml  test.yml
benchmarks/: RESULTS.md  bench_core.py  config.py  profile_cfdb.py  run_benchmarks.py  utils.py
benchmarks/backends/: base.py  cfdb_backend.py  netcdf4_backend.py  zarr_backend.py
benchmarks/results/: after-bugfix-2026-07-21.json  after-perf-2026-07-21.json  baseline-2026-07-21.json  perf-baseline-2026-07-21.json  perf-round-2026-07-21.md
benchmarks/scenarios/: filesize.py  iterate.py  read.py  write.py
cfbooklet/: __init__.py  creation.py  data_models.py  indexers.py  main.py  rechunker.py  support_classes.py  utils.py
cfbooklet/tests/: utest.py
cfdb/: __init__.py  combine.py  core.py  creation.py  data_models.py  dtypes.py  edataset.py  grid_interp.py  indexers.py  interp.py  main.py  merge.py  rechunker.py  rechunkit.py  support_classes.py  tools.py  utils.py  xarray_backend.py
cfdb/tests/: test_api.py  test_combine.py  test_creation_guards.py  test_dataset.py  test_dataset_rechunker.py  test_dtypes.py  test_edataset.py  test_encoded_fill.py  test_grid_interp.py  test_groupby_periods.py  test_indexing_semantics.py  test_interp.py  test_merge.py  test_perf_round.py  test_remote.cfdb.ebooklet  test_remote_fg1.cfdb.ebooklet  test_remote_fg2.cfdb.ebooklet  test_xarray_backend.py  utest.py
conda/: meta.yaml
docs/: changelog.md  index.md
docs/concepts/: architecture.md  cf-conventions.md  chunking-storage.md  rechunking-internals.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: attributes.md  combining-datasets.md  coordinates.md  data-types.md  data-variables.md  dataset-types.md  export-copy.md  grid-interpolation.md  indexing.md  interpolation.md  opening-datasets.md  rechunking.md  s3-remote.md  xarray-backend.md
docs/reference/: cfbooklet.md  combine.md  coordinate.md  creator.md  data-variable.md  dataset-rechunker.md  dataset.md  dtypes.md  edataset.md  grid-interp.md  index.md  interp.md  merge_into.md  open-dataset.md  open-edataset.md  rechunker.md  tools.md  xarray-backend.md
plans/: combine_plan.md  evaluation.md  multi_variable_iteration_plan.md  perf-plan-review-brief-gemini.md  perf-round-plan-2026-07-21.md  perf-round-planning-notes.md  rechunkit-cfdb-review-2026-07-20.md
